working on templates
added blank templates now.

--- a/tweetme/templates/base_template.html
+++ b/tweetme/templates/base_template.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <% block content %>
-    <%end block%>
+    {% block content %}
+    {%end block%}
 </body>
 </html>
