login module worked
login module has been redirected to the template

--- a/tweetme/templates/base_template.html
+++ b/tweetme/templates/base_template.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Base template</title>
+    <h1>Base header</h1>
 </head>
 <body>
-    {% block content %}
-    {%end block%}
+    {%block content%}
+    {% endblock content %}
 </body>
 </html>
