--- a/tweetme/templates/index.html
+++ b/tweetme/templates/index.html
@@ -7,6 +7,14 @@
     <title>Index</title>
 </head>
 <body>
+    <a href="{% url 'login'%}">Login</a>
+    <a href="{% url 'logout'%}">Logout</a>
+    <a href="{% url 'signup'%}">Signup</a>
+    <br>
+    <a href="">twitter feed</a>
+    <a href="">user feed</a>
+    <a href="">core operation</a>
+
     
 </body>
 </html>
