--- a/tweetme/templates/login.html
+++ b/tweetme/templates/login.html
@@ -1,1 +1,24 @@
-{% extends "base_generic.html" %}
+{% extends "base_template.html" %}
+{%block title %}Login{%endblock%}
+{%block content%}
+<div>
+    <form id = "login-form" method="POST" action={% url "login" %}>
+        {% csrf_token %}
+        <table>
+            <tr>
+                <td><label id = "id_username">Username</label></td>
+                <td><input id="username-input" type="text" name="username"/></td>
+            </tr>
+            <tr>
+                <td><label id = "id_paswd">Password</label></td>
+                <td><input id="username-pwd" type="text" name="Password"/></td>
+            </tr>
+        </table>
+        {%if form.errors%}
+            <p>Your username didnt match. Please try again.</p>
+        {%endif%}
+        <input type="submit" value="login"/>
+        <input type="hidden" name="next" value="{{ next }}"/>
+    </form>
+</div>
+{% endblock content %}
