--- a/tweetme/templates/login.html
+++ b/tweetme/templates/login.html
@@ -1,10 +1,12 @@
 {% extends "base_template.html" %}
-{%block title %}Login{%endblock%}
+
 {%block content%}
+{%block title %}Login{%endblock%}
 <div>
     <form id = "login-form" method="POST" action={% url "login" %}>
         {% csrf_token %}
-        <table>
+        {{form.as_p}}
+        <!-- <table>
             <tr>
                 <td><label id = "id_username">Username</label></td>
                 <td><input id="username-input" type="text" name="username"/></td>
@@ -13,7 +15,7 @@
                 <td><label id = "id_paswd">Password</label></td>
                 <td><input id="username-pwd" type="text" name="Password"/></td>
             </tr>
-        </table>
+        </table> -->
         {%if form.errors%}
             <p>Your username didnt match. Please try again.</p>
         {%endif%}
