--- a/tweetme/templates/signup.html
+++ b/tweetme/templates/signup.html
@@ -1,4 +1,9 @@
 {% extends "base_template.html" %}
 {%block content%}
 <h1>This is signup page</h1>
+<form method="POST">
+    {%csrf_token%}
+    {{form.as_p}}
+    <button type="submit" > Signup </button>
+</form>
 {% endblock content %}
