--- a/tweetme/templates/index.html
+++ b/tweetme/templates/index.html
@@ -10,6 +10,8 @@
     <a href="{% url 'login'%}">Login</a>
     <a href="{% url 'logout'%}">Logout</a>
     <a href="{% url 'signup'%}">Signup</a>
+    <a href="/admin/">admin</a>
+    <a href="{% url 'user-form'%}">forms</a>
     <br>
     <a href="">twitter feed</a>
     <a href="">user feed</a>
